// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AccountNotifications.tsx should render itself (github.com with notifications) 1`] = `
[
  <div
    className="flex flex-1 items-center justify-between py-2 px-4 bg-gray-300 dark:bg-gray-darkest dark:text-white text-sm"
  >
    github.com
    <svg
      aria-hidden="true"
      className="octicon octicon-chevron-down"
      fill="currentColor"
      focusable="false"
      height={20}
      role="img"
      style={
        {
          "display": "inline-block",
          "overflow": "visible",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={20}
    >
      <path
        d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
      />
    </svg>
  </div>,
  <label
    className="flex items-center"
  >
    Group by:
    <select
      className="ml-2 border border-gray-300 rounded p-2"
      onChange={[Function]}
      value="repository"
    >
      <option
        value="repository"
      >
        Repository
      </option>
      <option
        value="date"
      >
        Date
      </option>
    </select>
  </label>,
  <div>
    Repository
  </div>,
]
`;

exports[`components/AccountNotifications.tsx should render itself (github.com without notifications) 1`] = `
[
  <div
    className="flex flex-1 items-center justify-between py-2 px-4 bg-gray-300 dark:bg-gray-darkest dark:text-white text-sm"
  >
    github.com
    <svg
      aria-hidden="true"
      className="octicon octicon-chevron-left"
      fill="currentColor"
      focusable="false"
      height={20}
      role="img"
      style={
        {
          "display": "inline-block",
          "overflow": "visible",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={20}
    >
      <path
        d="M9.78 12.78a.75.75 0 0 1-1.06 0L4.47 8.53a.75.75 0 0 1 0-1.06l4.25-4.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L6.06 8l3.72 3.72a.75.75 0 0 1 0 1.06Z"
      />
    </svg>
  </div>,
  <label
    className="flex items-center"
  >
    Group by:
    <select
      className="ml-2 border border-gray-300 rounded p-2"
      onChange={[Function]}
      value="repository"
    >
      <option
        value="repository"
      >
        Repository
      </option>
      <option
        value="date"
      >
        Date
      </option>
    </select>
  </label>,
]
`;
